turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:16: error: ')' expected but 'if' found.
  if (rule(state)(ind)(1) == 1){
  ^